# auth-lib

./: .gitignore  Cargo.toml  env.example
initial_setup/: README.md
src/: lib.rs
src/auth/: mod.rs  password.rs  register.rs  service.rs
src/data_models/: postgres.sql
src/interfaces/: auth.rs  config.rs  jwt.rs  mod.rs
src/interfaces/cache/: mod.rs  token_blocklist.rs
src/interfaces/db/: mod.rs  role_repo.rs  session_repo.rs  user_repo.rs  user_role_repo.rs
src/interfaces/storage/: user_repo.rs
src/model/: config.rs  mod.rs  role.rs  session.rs  token.rs  user.rs  user_role.rs
src/model/migrations/: mongo.js  mysql.sql  postgres.sql
src/model/storage/: postgres.rs
src/storage/: db_factory.rs  mod.rs  pg_pool.rs  user_repo.rs
src/storage/postgres/: mod.rs  pg_pool.rs  role_repo.rs  user_repo.rs  user_role_repo.rs
src/storage/queries/: mod.rs  role_queries.rs  user_queries.rs  user_role_queries.rs
src/utils/: config.rs  errors.rs  mod.rs
tests/: config_load.rs  config_test.rs  helpers.rs  register_user.rs  registration_test.rs  role_user.rs  roles.rs  user_role.rs
