[package]
name = "auth-lib"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "setup_db"
path = "src/bin/setup_db.rs"

# ── Add these dependencies (merge into your existing [dependencies] section) ──
[dependencies]
async-trait = "0.1.89"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-4", "with-chrono-0_4"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.14.1"
argon2 = { version = "0.5", features = ["std"] }
