[package]
name = "auth-lib"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "setup_db"
path = "src/bin/setup_db.rs"

[dependencies]
async-trait = "0.1.89"
tokio       = { version = "1", features = ["full"] }
sqlx        = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "uuid", "chrono", "macros"] }
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
argon2      = { version = "0.5", features = ["std"] }
